--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@types/node": "20.12.7",
     "@types/nodemailer": "^6.4.7",
     "@types/react": "^18.0.29",
     "@types/video-react": "^0.15.1",
