--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "@reduxjs/toolkit": "^2.0.1",
+    "@vercel/speed-insights": "^1.0.10",
     "antd": "^5.5.2",
     "axios": "^1.3.5",
     "clsx": "^1.2.1",
