--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "antd": "^5.5.2",
     "axios": "^1.3.5",
     "clsx": "^1.2.1",
+    "docx": "^8.5.0",
     "framer-motion": "^10.16.14",
+    "mammoth": "^1.7.2",
     "mapbox-gl": "^3.1.2",
     "next": "^13.4.5",
     "nodemailer": "^6.9.1",
     "nodemailer-dkim": "^1.0.5",
+    "pdf-parse": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
