--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "antd": "^5.5.2",
-    "axios": "^1.3.5",
+    "axios": "^1.6.8",
     "clsx": "^1.2.1",
     "docx": "^8.5.0",
     "framer-motion": "^10.16.14",
@@ -34,6 +34,8 @@
     "next": "^13.4.5",
     "nodemailer": "^6.9.1",
     "nodemailer-dkim": "^1.0.5",
+    "openai": "^4.47.1",
+    "openai-edge": "^1.2.2",
     "pdf-parse": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
