--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@types/formidable": "^3.4.5",
     "@types/pdf-parse": "^1.1.4",
+    "@types/typed.js": "^2.0.9",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "antd": "^5.5.2",
@@ -42,9 +43,11 @@
     "react-icons": "^4.10.1",
     "react-map-gl": "^7.1.7",
     "react-redux": "^9.0.2",
+    "react-typed": "^2.0.12",
     "sharp": "^0.32.0",
     "swiper": "^9.3.2",
     "tailwind-merge": "^1.10.0",
+    "typed.js": "^2.1.0",
     "video-react": "^0.16.0"
   },
   "devDependencies": {
