--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@gsap/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.0.1",
     "@types/formidable": "^3.4.5",
     "@types/pdf-parse": "^1.1.4",
@@ -30,6 +31,7 @@
     "clsx": "^1.2.1",
     "docx": "^8.5.0",
     "framer-motion": "^10.16.14",
+    "gsap": "^3.12.5",
     "mammoth": "^1.7.2",
     "mapbox-gl": "^3.1.2",
     "next": "^13.4.5",
