--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "pdf-parse": "^1.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-gsap": "^3.2.1",
     "react-icons": "^5.2.1",
     "react-map-gl": "^7.1.7",
     "react-redux": "^9.1.2",
