--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: GetHiredHints CI/CD
+name: CareerSync CI/CD
 
 on:
   push:
@@ -72,9 +72,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+        # with:
+        #   node-version: ${{ matrix.node-version }}
+        #   cache: 'npm'
       - run: npm ci
 
       - name: Build Next js for testing
