--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@types/formidable": "^3.4.5",
     "@types/pdf-parse": "^1.1.4",
-    "@vercel/analytics": "^1.2.2",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.10",
     "antd": "^5.5.2",
     "axios": "^1.7.2",
@@ -31,6 +31,7 @@
     "docx": "^8.5.0",
     "formidable": "^2.1.2",
     "framer-motion": "^10.16.14",
+    "google": "link:@next/third-parties/google",
     "gsap": "^3.12.5",
     "i": "^0.3.7",
     "mammoth": "^1.7.2",
