--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "video-react": "^0.16.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.25.8",
+    "@babel/preset-react": "^7.25.7",
     "@commitlint/cli": "^16.3.0",
     "@commitlint/config-conventional": "^16.2.4",
     "@svgr/webpack": "^6.5.1",
