--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^4.12.0",
+    "react-linkedin-login-oauth2": "^2.0.1",
     "react-map-gl": "^7.1.7",
     "react-redux": "^9.1.2",
     "react-typed": "^2.0.12",
