--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-linkedin-login-oauth2": "^2.0.1",
     "react-map-gl": "^7.1.7",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.28.0",
     "react-typed": "^2.0.12",
     "sharp": "^0.32.6",
     "swiper": "^9.4.1",
