--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "google": "link:@next/third-parties/google",
     "gsap": "^3.12.5",
     "i": "^0.3.7",
+    "js-cookie": "^3.0.5",
     "mammoth": "^1.7.2",
     "mapbox-gl": "^3.4.0",
     "next": "^13.5.6",
@@ -66,6 +67,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "20.12.7",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18.3.3",
