feat: add encrypted data in cookies

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "antd": "^5.18.0",
     "axios": "^1.7.2",
     "clsx": "^1.2.1",
+    "crypto-js": "^4.2.0",
     "docx": "^8.5.0",
     "formidable": "^2.1.2",
     "framer-motion": "^10.18.0",
@@ -67,6 +68,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "20.12.7",
     "@types/nodemailer": "^6.4.15",
