--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "pdf-parse": "^1.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^4.12.0",
     "react-linkedin-login-oauth2": "^2.0.1",
     "react-map-gl": "^7.1.7",
