--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "openai-edge": "^1.2.2",
     "pdf-parse": "^1.1.1",
     "react": "^18.3.1",
+    "react-alice-carousel": "^2.9.1",
     "react-dom": "^18.3.1",
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.12.0",
