--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "framer-motion": "^10.18.0",
     "google": "link:@next/third-parties/google",
     "gsap": "^3.12.5",
+    "html2canvas": "^1.4.1",
     "i": "^0.3.7",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.2",
     "mammoth": "^1.7.2",
     "mapbox-gl": "^3.4.0",
     "next": "^13.5.6",
@@ -71,7 +73,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@types/crypto-js": "^4.2.2",
+    "@types/html2canvas": "^1.0.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/jspdf": "^2.0.0",
     "@types/node": "20.12.7",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18.3.3",
