--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
     "@gsap/react": "^2.1.1",
+    "@pdf-lib/fontkit": "^1.1.1",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.5",
     "@types/formidable": "^3.4.5",
@@ -47,6 +48,7 @@
     "npm": "^10.8.1",
     "openai": "^4.47.3",
     "openai-edge": "^1.2.2",
+    "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
     "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
